# GrafoPropagation

./: BENCHMARK_VERIFICATION.md  Grafo GLue.py  LICENSE  MANIFEST.in  POSITIONING.md  QM9.py  README.md  SCALING_LAWS.md  V27_SPECIFICATION.md  __init__.py  attention.py  cli.py  config.py  datasets.py  grafo_v26_apex2_yahoo.py  heads.py  layers.py  logging_utils.py  losses.py  memory.py  model.py  optimizer.py  positional.py  primitives.py  pyproject.toml  quantum.py  setup.py  system2.py  tokenizer_utils.py  train.py  transformer.py
